@@ -9,6 +9,7 @@ Allow SDL driver force window size
 Allow DESTDIR environment varieble on make install step
 Allow to accelerate loading and saving of diskette, microdrive, etc
 Added config setting for autoenable ay chip on Spectrum models without ay chip
+Added lightgun scope
 
 Improved ZX Vision:
 - Added new Top Menu (not enabled by default)
